// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`search/composer.tsx snapshots > renders the destination field active — no current-position row 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#EEF1EC",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#EEF1EC",
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.close"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="close"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              null,
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:composer.searchDestination
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": 52,
            "paddingHorizontal": 12,
          },
          {
            "backgroundColor": "#F7F9F5",
            "borderColor": "#DEE5DE",
          },
        ]
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#4F5C55"
        importantForAccessibility="no-hide-descendants"
        name="search"
        size={20}
      />
      <TextInput
        autoFocus={true}
        onChangeText={[Function]}
        placeholder="search:composer.searchDestination"
        placeholderTextColor="#7D8981"
        returnKeyType="search"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "padding": 0,
            },
            {
              "color": "#14201B",
            },
          ]
        }
        value=""
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 18,
          },
          null,
          {
            "color": "#7D8981",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "letterSpacing": 0.6,
            "marginBottom": 8,
            "marginTop": 16,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      search:composer.recentSectionLabel
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#F7F9F5",
          },
        ]
      }
    >
      <FlatList>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              null,
              {
                "color": "#7D8981",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "marginTop": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          search:composer.noRecents
        </Text>
      </FlatList>
    </View>
  </View>
</View>
`;

exports[`search/composer.tsx snapshots > renders the origin field active — title, current-position row, saved places, recents 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#EEF1EC",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#EEF1EC",
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.close"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="close"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              null,
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:composer.searchPickup
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": 52,
            "paddingHorizontal": 12,
          },
          {
            "backgroundColor": "#F7F9F5",
            "borderColor": "#DEE5DE",
          },
        ]
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#4F5C55"
        importantForAccessibility="no-hide-descendants"
        name="search"
        size={20}
      />
      <TextInput
        autoFocus={true}
        onChangeText={[Function]}
        placeholder="search:composer.searchPickup"
        placeholderTextColor="#7D8981"
        returnKeyType="search"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "padding": 0,
            },
            {
              "color": "#14201B",
            },
          ]
        }
        value=""
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.7}
      disabled={false}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingVertical": 12,
          },
          false,
        ]
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#4A7C8C"
        importantForAccessibility="no-hide-descendants"
        name="locate"
        size={20}
      />
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            null,
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            undefined,
          ]
        }
      >
        search:composer.myLocation
      </Text>
    </TouchableOpacity>
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 18,
          },
          null,
          {
            "color": "#7D8981",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "letterSpacing": 0.6,
            "marginBottom": 8,
            "marginTop": 16,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      search:composer.recentSectionLabel
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#F7F9F5",
          },
        ]
      }
    >
      <FlatList>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              null,
              {
                "color": "#7D8981",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "marginTop": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          search:composer.noRecents
        </Text>
      </FlatList>
    </View>
  </View>
</View>
`;
